testcases/pos/labeled/call_with_secret.bard
let fun f(x) = x
    val y = 42 raisedTo {secret}
in
    f(y)
end
