testcases/neg/labeled/binop_raise_blocking.bard
let val x = 3 raisedTo {secret}
    val y = x + 8
in
    send true
end
